делаю всплывающее окно

--- a/index.html
+++ b/index.html
@@ -103,8 +103,17 @@
       					<span class="fivesteps-text-item--description">Курьер позвонит за час <br>и доставит букет во <br>время</span>
     				</div>
 				</div>
-  			
+  				
+  				<div class="row justify-content-center">
+				<div class="col-md-auto popup">
+					<div class="close-button-wrapper"><img class="close-button"src="images/close.png">
+					</div>
+
+
+				</div>
+
   			</div>
+  			<div class="popup-brightness">1</div>
 		</body>
 <script src="script.js"></script>
 	</html>
