--- a/index.html
+++ b/index.html
@@ -106,10 +106,25 @@
   				
   				<div class="row justify-content-center">
 				<div class="col-md-auto popup">
-					<div class="close-button-wrapper"><img class="close-button"src="images/close.png">
+					<div class="close-button-wrapper" id="close-button"><img class="close-button"src="images/close.png">
 					</div>
-
-
+					<div class="popup-logo-wrapper"><img class="popup-logo" src="images/star2.png">
+					</div>
+					<span class="popup-title">Обратный звонок
+					</span>
+					<span class="form-description--name">*Имя
+					</span>
+					<input class="input input-name" type="text" placeholder="&nbsp Николай">
+					<span class="form-description--number">*Телефон
+					</span>
+					<input class="input input-number" type="text">
+					<span class="form-description--gray">*Нажимия кнопку “Оставить заявку” я даю согласие на обработку данных 
+					</span>
+					<div class="popup-send-button">
+						<span class="popup-send-button--text">
+							Отправить заявку
+						</span>
+					</div>
 				</div>
 
   			</div>
