--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				</div>
 
   			</div>
-  			<div class="popup-brightness">1</div>
+  			<div class="popup-brightness">&nbsp</div>
 		</body>
 <script src="script.js"></script>
 	</html>
