tablet 	new file:   images/burger.png 	modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 		</head>
 		<body>
 			<div class="container-fluid">
+
   				<div class="row justify-content-center menu-wrapper">
+  					<div class="col-md-auto burger">
+      					<img src="images/burger.png" alt="menu">
+    				</div>
     				<div class="col-md-auto logo">
       					<img src="images/pngwingcom1.png" alt="WildFlower">
     				</div>
@@ -35,17 +39,17 @@
     				</div>
   				</div>
 
-				<div class="row justify-content-center main"> <!-- 1213 -->
-    				<div class="col-md-auto main-section" > <!-- 799 -->
+				<div class="row justify-content-center main"> 
+    				<div class="col-md-auto main-section" > 
       					<img class="main-section-image" src="images/star.png">
       					<span class="main-section-title">Цветы для самых любимых</span>
       					<span class="main-section-description">Каждый день мы создаем новую композицию из<br> свежих, сезонных цветов</span>
       					<div class="main-section-button">Заказать сейчас</div>
     				</div>
-    				<div class="col-md-auto main-photo"> <!-- 337 -->
+    				<div class="col-md-auto main-photo"> 
       					<img src="images/photo.png">
     				</div>
-    				<div class="col-md-auto main-links"> <!-- 77 -->
+    				<div class="col-md-auto main-links"> 
       					<img class="main-links--item" id ="twitter" src="images/twitter.png" alt="tw">
       					<img class="main-links--item" id ="pin"src="images/pin.png" alt="pin">
       					<img class="main-links--item" id ="youtube"src="images/youtube.png" alt="you">
@@ -127,8 +131,9 @@
 					</div>
 				</div>
 
-  			</div>
-  			<div class="popup-brightness">&nbsp</div>
+  				</div>
+  				<div class="popup-brightness">&nbsp</div>
+			</div>
 		</body>
 <script src="script.js"></script>
 	</html>
