in progress 	new file:   images/line.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -55,10 +55,15 @@
       					<img class="main-links--item" id ="youtube"src="images/youtube.png" alt="you">
       					<img class="main-links--item" id ="facebook"src="images/facebook.png" alt="faceb">
     				</div>
+    				
   				</div>
+  				
 
   				<div class="row justify-content-center menu-wrapper">
     				<div class="col-md-auto ">
+    					<div class="line-wrapper">
+    					<img class="line" src="images/line.png" alt="">
+    				</div>
       					<span class="subtitle">5 шагов к авторскому букету</span>
     				</div>
 				</div>
@@ -66,7 +71,7 @@
 				<div class="row justify-content-center fivesteps-images">
 					<div class="col-md-auto ">
       					<img class="fivesteps-image" src="images/1img.png" >
-      					<img src="images/1line.png" >
+      					<img class="fivesteps-underline" src="images/1line.png" >
     				</div>
     				<div class="col-md-auto ">
       					<img class="fivesteps-image" src="images/2img.png" >
@@ -74,7 +79,7 @@
     				</div>
     				<div class="col-md-auto ">
       					<img class="fivesteps-image" src="images/3img.png" >
-      					<img src="images/3line.png" >
+      					<img class="fivesteps-underline" src="images/3line.png" >
     				</div>
     				<div class="col-md-auto ">
       					<img class="fivesteps-image" src="images/4img.png" >
